Don't attempt to install ReleaseNotes.txt

--- a/Makefile.am
+++ b/Makefile.am
@@ -2,7 +2,7 @@
 SUBDIRS = CommonUtilitiesLib QTFileLib Server.tproj APIModules \
 	PlaylistBroadcaster.tproj initscripts Documentation
 
-dist_doc_DATA = ReleaseNotes.txt relayconfig.xml qtusers qtgroups qtaccess
+dist_doc_DATA = relayconfig.xml qtusers qtgroups qtaccess
 
 doc_DATA = streamingserver.xml
 
