--- a/revision.h.in
+++ b/revision.h.in
@@ -10,7 +10,7 @@
  * compliance with the License. Please obtain a copy of the License at
  * http://www.opensource.apple.com/apsl/ and read it before using this
  * file.
- * 
+ *
  * The Original Code and all software distributed under the License are
  * distributed on an 'AS IS' basis, WITHOUT WARRANTY OF ANY KIND, EITHER
  * EXPRESS OR IMPLIED, AND APPLE HEREBY DISCLAIMS ALL SUCH WARRANTIES,
@@ -18,24 +18,23 @@
  * FITNESS FOR A PARTICULAR PURPOSE, QUIET ENJOYMENT OR NON-INFRINGEMENT.
  * Please see the License for the specific language governing rights and
  * limitations under the License.
- * 
+ *
  * @APPLE_LICENSE_HEADER_END@
  *
  */
 /* revision.h -- define the version number
- 
+
 */
 
 // Use no http/rtsp tspecial chars in kVersionString and kBuildString defines
 // tspecials =  ()<>@,;:\/"[]?=
 
-#define kVersionString "6.0.3"
+#define kVersionString "@VERSION@"
 #define kBuildString "526.3"
 
-// Use kCommentString for seed or other release info 
+// Use kCommentString for seed or other release info
 // Do not use '(' or ')' in the kCommentString
 // form = token1/info; token2/info;
 // example "Release/public seed 1; Event/Big Event; state/half-baked"
 
-#define kCommentString "Release/Darwin Streaming Server; State/Development; " 
-
+#define kCommentString "Release/Darwin Streaming Server; State/Development; Branch/Evolution"
